--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:700);
 
 body {
-    width: 2000px;
+    width: 100%;
+	height: 100%;
     font-family: 'Roboto';
     color: white;
     text-align: center;
