--- a/style.css
+++ b/style.css
@@ -12,22 +12,15 @@ body {
     text-align: center;
 }
 
+.logo {
+  width:  100%;
+  
+}
+
 .link {
     display: inline-block;
 	width: 5%;
 	height: 5%;
-}
-
-logo {
-	
-}
-
-img {
-    border: 0px solid black;
-    padding: 1em;
-    display: block;
-    width: 100px;
-    height: 100px;
-    vertical-align: middle;
-    margin: 0 auto;
+    padding-right:  3%;
+    padding-left:  3%;
 }
