--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 .link {
     display: inline-block;
-    width: 5%;
-    height: 5%;
+    width: 80pm;
+    height: 80px
     padding-right: 5%;
 }
