--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 body {
   background-image: url("https://cdn.discordapp.com/attachments/1007632534672253011/1007645900056834158/banner-blank.png");
+  background-repeat: no-repeat;
+  
 }
 
 .logo {
@@ -12,31 +14,31 @@ body {
   text-align: center;
 }
 
-.module {
-  font-size: 18px;
-  font-family: 'Bebas Neue', cursive;
-  border: 2px solid white;
-  width: 20%;
-  height: 30px;
-  border-radius:  10px;
-  color:  white;
-  min-width: 200px;
-  margin-bottom: 10px;
-  padding-left: 5px;
-  display:  block;
+.test {
   margin-left:  auto;
   margin-right:  auto;
+  display:  block;
+  width:  200px;
+  height:  30px;
+  background:  rgba(255, 255, 255, 0.2);
+  border:  2px solid white;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 20px;
+  
 }
 
+
 .link-text {
-  transform: translateY(-190%) translateX(8%);
+  transform: translateY(-170%) translateX(0%);
   color:  white;
   text-align: center;
 }
 
 .link-icon {
   height:  100%;
-  width: 30px;
-  display: inline-block;
+  width: 25px;
+  transform: translateX(-320%);
 }
 
