--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
 }
 
 a:link {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 0, 0, 0);
+  padding: 60%;
   color: white;
-  padding:  13px 50%;
   text-align: center;
   text-decoration: none;
+  border-radius:  50px;
   display: inline-block;
-  transform: translateY(-350%);
+  transform:  translateY(-53px) translateX(-5px);
 }
 
 
