--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   line-height: 5px;
 }
 
-.description 
+.description {
   color: white;
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
